# observer_v

./: .gitignore  CMakeLists.txt  README.md
src/: collection_action.h  collection_observer.h  main.cpp  observable_vector.h  observer.h
